docs/7.52/md/abennews-70_ehps.md
  

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Release-Specific Changes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews.htm) → 

Changes in Release 7.0 and its EhPs

From Release 7.0, the further development of ABAP and the ABAP runtime environment took place inEnhancement Packs (EhPs). There were no changes between Release 7.0 and EhP1 (Release 7.01), but in EhP2 (Release 7.02) massive enhancements were made, resulting from a porting of a parallel release track (7.1, 7.2). In EhP3 (Release 7.03) (identical to Release 7.3, EhP1 (7.31) with respect to ABAP and the ABAP runtime environment), hardly any changes were made.

-   [Changes in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703.htm)

-   [Changes in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71.htm)

-   [Changes in Release 7.0](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70.htm)

Continue
[Changes in Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-703.htm)
[Changes in Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-71.htm)
[Changes for Release 7.0](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abennews-70.htm)