docs/7.57/md/abennews-70_ehps.md
  

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: News for Release 7.0 and its EhPs, ABENNEWS-70_EHPS, 757%0D%0A%0D%0AError:%0D%0A%0D%0
A%0D%0A%0D%0ASuggestion for improvement:)

News for Release 7.0 and its EhPs

From [ABAP release](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_release_glosry.htm "Glossary Entry") 7.0, the further development of ABAP and the ABAP runtime framework took place in Enhancement Packs (EhPs). There were no changes between Release 7.0 and EhP1 (Release 7.01), but in EhP2 (Release 7.02) massive enhancements were made, resulting from a porting of a parallel release track (7.1, 7.2). In EhP3 (Release 7.03) (identical to Release 7.3, EhP1 (7.31) with respect to ABAP and the ABAP runtime framework), hardly any changes were made.

-   [News for Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703.htm)
-   [News for Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71.htm)
-   [News for Release 7.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70.htm)

Continue
[News for Release 7.0, EhP3 and 7.3, EhP1](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-703.htm)
[News for Release 7.0, EhP2](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-71.htm)
[News for Release 7.0](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennews-70.htm)